<resources>
    <string name="app_name">GOGOT</string>
    <string name="new_game">новая игра</string>
    <string name="settings">настройки</string>
    <string name="new_game_vs_ai">Против искуственного интелекта</string>
    <string name="one_vs_one">Один на один</string>
    <string name="three_players">Играть втроем</string>
    <string name="back">Назад</string>
    <string name="game_menu_title">Игра приостановлена</string>
    <string name="back_to_main_menu">Вернуться в главное меню</string>
    <string name="resume_game">Продолжить игру</string>
    <string name="game_ended">Игра окончена</string>
    <string name="you_cant_move_there">Вы не можете походить туда.</string>
    <string name="restart_game">Начать заново</string>
    <string name="play_one_more_time">Сыграть еще раз</string>
    <string name="place">%1$dе место</string>
    <string name="pointss">%1$d очков</string>
    <string name="point">%1$d очко</string>
    <string name="points">%1$d очка</string>

    <string name="easy">легко</string>
    <string name="hard">сложно</string>
    <string name="donate_button">Помочь разработчикам</string>
    <string name="tutorial">Обучение</string>
    <string name="rools">\t Добро пожаловать в GOGOT. \n \n
        \t Перед игроками на поле 6x6 расположены карты 8 классов.
        Каждый в свой ход должен передвинуть карту полководца по вертикали или горизонтали,
        собирая по пути карты того же класса, что и карта на которую игрок нажал,
        выбрав тем самым ее как точку назначения. \n \n
        \t Ваша цель —  собрать сильнейшую армию, то есть набрать больше всех очков.
        За каждую собранную карту вы получаете 1 очко.
        Если у вас карт некоторого класса больше, чем у других игроков,
        то вы являетесь знаменосцем этого класса и получаете дополнительные очки.
        Если у вас с соперником (соперниками) поровну карт одного и того же класса,
        то знаменосцем считается тот, кто взял карту этого класса последним.
        Чем больше у класса представителей, тем больше очков стоит его знамя.\n \n
        \t Успехов!
    </string>
    <string name="choose_picture">Выбор аватарок для игроков:</string>
    <string name="player">Игрок</string>
    <string name="st_player">%1$dй игрок</string>
    <string name="choose_picture_for_player">Выберите аватарку для %1$dго игрока</string>
    <string name="ok">Готово</string>
    <string name="timer_settings">Настройки таймера(скоро):</string>
    <string name="equal_time">Равное время для всех игроков.</string>
    <string name="timer_is_set">Игра с таймером</string>
    <string name="cancel">Отмена</string>
    <string name="music">Музыка</string>
    <string name="choose_time_for_player">Выберете время для %1$dго игрока</string>
</resources>
