<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background7"
    >

    <Button
        android:id="@+id/vsAIButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_vs_ai"
        app:layout_constraintBottom_toTopOf="@+id/oneVSOneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onChooseDifficultyClick"/>

    <Button
        android:id="@+id/oneVSOneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_vs_one"
        app:layout_constraintBottom_toTopOf="@+id/threePlayersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vsAIButton"
        android:onClick="onStartGameClick"/>

    <Button
        android:id="@+id/threePlayersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_players"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneVSOneButton"
        android:onClick="onStartGameClick"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threePlayersButton" />
</androidx.constraintlayout.widget.ConstraintLayout>